docs: images-benchmark README 업데이트 — 실측 벤치마크 결과 및 Mermaid 차트 추가