@@ -2,7 +2,7 @@
 
 # Module bluetape4k-images-benchmark
 
-Scrimage와 libvips 이미지 처리 성능을 비교하는 JMH 벤치마크 모듈.
+[scrimage](https://sksamuel.github.io/scrimage/)와 [libvips](https://www.libvips.org/) 이미지 처리 성능을 비교하는 JMH 벤치마크 모듈.
 
 ## 아키텍처
 
@@ -15,134 +15,168 @@ flowchart TD
     end
 
     subgraph State["JMH 상태 객체"]
-        VSTATE["VipsBenchmarkState\n(런타임 초기화 + 샘플 이미지)"]
-        ISTATE["ImageBenchmarkState\n(scrimage ImmutableImage 샘플)"]
+        VSTATE["VipsBenchmarkState\n(런타임 초기화 + 샘플 이미지\nmacOS 라이브러리 경로 자동 설정)"]
+        IMGSETS["BenchmarkImageSets\n(합성 photo4k / document / thumbnail)"]
     end
 
     subgraph Impls["구현체"]
-        SCRIMAGE["bluetape4k-images\n(Scrimage)"]
-        JAVA21["bluetape4k-images-vips-java21\n(JVips / JNI)"]
-        JAVA25["bluetape4k-images-vips-java25\n(vips-ffm / FFM)"]
+        SCRIMAGE["bluetape4k-images\n(Scrimage / Java 2D)"]
+        JAVA21["bluetape4k-images-vips-java21\n(JVips / JNI — Linux 전용)"]
+        JAVA25["bluetape4k-images-vips-java25\n(vips-ffm / Panama FFM)"]
     end
 
     RESIZE --> VSTATE
     ENCODE --> VSTATE
-    FILTER --> ISTATE
+    FILTER --> IMGSETS
     VSTATE --> JAVA21
     VSTATE --> JAVA25
-    ISTATE --> SCRIMAGE
+    IMGSETS --> SCRIMAGE
 
     classDef benchStyle fill:#E3F2FD,stroke:#90CAF9,color:#1565C0
     classDef stateStyle fill:#FFF3E0,stroke:#FFCC80,color:#E65100
     classDef implStyle fill:#E8F5E9,stroke:#A5D6A7,color:#2E7D32
 
     class RESIZE,ENCODE,FILTER benchStyle
-    class VSTATE,ISTATE stateStyle
+    class VSTATE,IMGSETS stateStyle
     class SCRIMAGE,JAVA21,JAVA25 implStyle
 ```
 
-## 개요
+## 벤치마크 결과
 
-이 모듈은 다음 항목에 대한 JMH 벤치마크를 제공합니다:
+> 실행 환경: macOS Apple Silicon, GraalVM JDK 25.0.3, vips-ffm 1.9.6 (libvips 8.18.2), AverageTime ms/op
 
-- **리사이즈**: scrimage `scaleTo` vs vips `resize` (다양한 출력 크기)
-- **인코딩**: scrimage JPEG/PNG writer vs vips JPEG/PNG 인코더
-- **필터**: scrimage `GrayscaleFilter`, `BlurFilter`, `SepiaFilter` 파이프라인 처리량
+### 리사이즈 (4K 3840×2160 → 타겟)
+
+```mermaid
+xychart-beta horizontal
+    title "Resize: scrimage vs vips (ms/op, 낮을수록 빠름)"
+    x-axis ["scrimage 1920×1080", "vips 1920×1080", "scrimage 1280×720", "vips 1280×720"]
+    y-axis "ms/op" 0 --> 80
+    bar [71.16, 0.20, 47.85, 0.21]
+```
+
+| 타겟 해상도 | scrimage (ms/op) | vips (ms/op) | 속도 향상 |
+|------------|-----------------|--------------|----------|
+| 1920×1080  | 71.16 ± 2.02    | 0.202 ± 0.006 | **352배** |
+| 1280×720   | 47.85 ± 1.72    | 0.207 ± 0.011 | **231배** |
+
+### 인코딩 (1240×1754 document 이미지)
+
+```mermaid
+xychart-beta horizontal
+    title "Encode: scrimage vs vips (ms/op, 낮을수록 빠름)"
+    x-axis ["scrimage JPEG", "vips JPEG", "scrimage PNG", "vips PNG"]
+    y-axis "ms/op" 0 --> 110
+    bar [52.49, 15.67, 94.87, 49.88]
+```
+
+| 포맷 | scrimage (ms/op) | vips (ms/op) | 속도 향상 |
+|------|-----------------|--------------|----------|
+| JPEG | 52.49 ± 0.44    | 15.67 ± 0.27  | **3.3배** |
+| PNG  | 94.87 ± 4.65    | 49.88 ± 1.02  | **1.9배** |
+
+### 필터 (scrimage 전용, 1240×1754)
+
+```mermaid
+xychart-beta horizontal
+    title "scrimage 필터 (ms/op, 낮을수록 빠름)"
+    x-axis ["Sepia", "Grayscale", "Blur"]
+    y-axis "ms/op" 0 --> 35
+    bar [13.19, 22.51, 29.80]
+```
+
+| 필터      | scrimage (ms/op) |
+|-----------|-----------------|
+| Sepia     | 13.19 ± 0.49    |
+| Grayscale | 22.51 ± 9.19    |
+| Blur      | 29.80 ± 1.23    |
+
+전체 원본 데이터: [`docs/benchmark-results-2026-04-29.md`](docs/benchmark-results-2026-04-29.md)
+
+---
 
 ## 벤치마크 실행
 
 ```bash
-# 모든 벤치마크 실행 (기본 JMH 설정)
-./gradlew :bluetape4k-images-benchmark:benchmark
+# Java 25 — scrimage + vips-ffm (Panama FFM, macOS/Linux)
+./gradlew :bluetape4k-images-benchmark:benchmarkBenchmark -Pvips.impl=java25
 
-# vips java21 바인딩으로 실행
-./gradlew :bluetape4k-images-benchmark:benchmark -Pvips.impl=java21
-
-# vips java25 바인딩으로 실행 (Java 25 + --enable-native-access 필요)
-./gradlew :bluetape4k-images-benchmark:benchmark -Pvips.impl=java25
-
-# 특정 벤치마크 클래스만 실행
-./gradlew :bluetape4k-images-benchmark:benchmark \
-    -Pbenchmark.includes=".*ImageResizeBenchmark.*"
-
-# JMH 옵션 커스터마이즈 (fork, 워밍업, 측정 반복 횟수)
-./gradlew :bluetape4k-images-benchmark:benchmark \
-    -Pbenchmark.forks=2 \
-    -Pbenchmark.warmupIterations=3 \
-    -Pbenchmark.measurementIterations=5
+# Java 21 — scrimage + JVips JNI (Linux 전용)
+./gradlew :bluetape4k-images-benchmark:benchmarkBenchmark -Pvips.impl=java21
 ```
+
+**macOS 사전 요구사항**: `brew install vips`
+
+`VipsBenchmarkState`가 macOS를 자동 감지하고 Homebrew 라이브러리 경로를 등록합니다
+(`vipsffm.libpath.*.override`). macOS SIP가 `DYLD_LIBRARY_PATH`를 제거하므로 필수.
+
+---
 
 ## 벤치마크 클래스
 
 ### `ImageResizeBenchmark`
 
-다양한 출력 크기에서의 리사이즈 처리량을 측정합니다.
+합성 4K 사진(3840×2160)을 여러 해상도로 리사이즈합니다.
 
-| 파라미터 | 값 |
-|----------|-----|
-| `width`  | 320, 640, 1280 |
-| `height` | 240, 480, 720  |
-| `impl`   | `scrimage`, `vips` |
+| 파라미터     | 값 |
+|-------------|-----|
+| `resolution` | `1920x1080`, `1280x720` |
 
 ```kotlin
 @Benchmark
-fun resizeScrimage(state: ImageBenchmarkState): ImmutableImage =
-    state.image.scaleTo(state.width, state.height)
+fun scrimage_scaleTo(bh: Blackhole) {
+    val resized = BenchmarkImageSets.photo4k.scaleTo(targetWidth, targetHeight)
+    bh.consume(resized)
+}
 
 @Benchmark
-fun resizeVips(state: VipsBenchmarkState): VipsImage =
-    state.image.resize(state.width, state.height)
-```
-
-### `ImageEncodeBenchmark`
-
-다양한 품질 수준에서의 JPEG 및 PNG 인코딩 처리량을 측정합니다.
-
-| 파라미터  | 값 |
-|-----------|-----|
-| `format`  | `JPEG`, `PNG` |
-| `quality` | 75, 85, 95 |
-| `impl`    | `scrimage`, `vips` |
-
-### `ImageFilterBenchmark`
-
-scrimage 필터 파이프라인 처리량을 측정합니다.
-
-| 벤치마크  | 필터 |
-|-----------|------|
-| `grayscale` | `GrayscaleFilter` |
-| `blur`      | `BlurFilter` |
-| `sepia`     | `SepiaFilter` |
-| `chain`     | `GrayscaleFilter + BlurFilter + SepiaFilter` |
-
-### `VipsBenchmarkState`
-
-JMH `@State` — fork당 한 번 vips 런타임을 초기화하고 샘플 이미지를 로드합니다.
-
-```kotlin
-@State(Scope.Benchmark)
-class VipsBenchmarkState {
-    lateinit var runtime: VipsRuntime
-    lateinit var imageBytes: ByteArray
-
-    @Setup(Level.Trial)
-    fun setUp() {
-        runtime = vipsRuntimeOf()
-        runtime.init(concurrency = 4, maxPixels = 150_000_000L)
-        imageBytes = loadSampleImageBytes()  // 1920x1080 JPEG
-    }
-
-    @TearDown(Level.Trial)
-    fun tearDown() {
-        runtime.shutdown()
+fun vips_resize(state: VipsBenchmarkState, bh: Blackhole) {
+    if (!state.vipsAvailable) { bh.consume(null); return }
+    state.createVipsImage(state.photo4kJpegBytes).use { img ->
+        bh.consume(img.resize(targetWidth, targetHeight))
     }
 }
 ```
 
-## 의존성 추가
+### `ImageEncodeBenchmark`
+
+합성 1240×1754 document 이미지를 JPEG/PNG로 인코딩합니다.
 
 ```kotlin
-dependencies {
-    implementation("io.github.bluetape4k:bluetape4k-images-benchmark:${version}")
+@Benchmark
+fun scrimage_encodeJpeg(bh: Blackhole) {
+    bh.consume(BenchmarkImageSets.document.bytes(JpegWriter(85, false)))
+}
+
+@Benchmark
+fun vips_encodeJpeg(state: VipsBenchmarkState, bh: Blackhole) {
+    if (!state.vipsAvailable) { bh.consume(null); return }
+    state.createVipsImage(state.photo4kJpegBytes).use { img ->
+        bh.consume(img.toJpegBytes(85))
+    }
+}
+```
+
+### `ImageFilterBenchmark`
+
+1240×1754 document 이미지에 scrimage 필터를 적용합니다.
+
+| 벤치마크             | 필터              |
+|----------------------|-----------------|
+| `scrimage_blur`      | `BlurFilter`    |
+| `scrimage_grayscale` | `GrayscaleFilter` |
+| `scrimage_sepia`     | `SepiaFilter`   |
+
+### `VipsBenchmarkState`
+
+JMH `@State(Scope.Thread)` — 리플렉션으로 vips 런타임을 Trial당 1회 초기화합니다
+(`FfmVipsRuntime` Java 25 또는 `JVipsRuntime` Java 21 자동 탐색).
+
+```kotlin
+@Setup(Level.Trial)
+fun setup() {
+    photo4kJpegBytes = BenchmarkImageSets.photo4k.bytes(JpegWriter(80, false))
+    applyMacOsVipsLibraryPaths()   // macOS에서 vipsffm.libpath.*.override 설정
+    vipsAvailable = tryInitVipsRuntime()
 }
 ```
